@@ -3060,8 +3060,6 @@ When FORCE, rebuild the tool bar."
 (defvar bookmark-make-record-function)
 
 
-(defvar bidi-paragraph-direction)
-
 (defun gnus-summary-mode (&optional group)
   "Major mode for reading articles.
 
@@ -3100,8 +3098,9 @@ The following commands are available:
   (setq buffer-read-only t		;Disable modification
 	show-trailing-whitespace nil)
   (setq truncate-lines t)
-  ;; Force paragraph direction to be left-to-right.
-  (setq bidi-paragraph-direction 'left-to-right)
+  ;; Force paragraph direction to be left-to-right.  Don't make it
+  ;; bound in old Emacsen and XEmacsen.
+  (set (make-local-variable 'bidi-paragraph-direction) 'left-to-right)
   (add-to-invisibility-spec '(gnus-sum . t))
   (gnus-summary-set-display-table)
   (gnus-set-default-directory)
