@@ -1,3 +1,8 @@
+2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-sum.el (gnus-summary-mode): Don't make bidi-paragraph-direction
+	bound in old Emacsen and XEmacsen.
+
 2012-01-26  Nick Alcock  <nick.alcock@oracle.com>  (tiny change)
 
 	* gnus.el (gnus-group-find-parameter): Check for liveness of the
